--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,228 @@
-body {
+* {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  padding: 0;
+  box-sizing: border-box;
+  font-family: 'Source Sans Pro', sans-serif;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+.border {
+  border: solid 2px black;
+}
+
+header {
+  padding: 20px 0 20px 0;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  box-shadow: 0 6px 6px -2px rgba(0, 0, 0, 0.2); /* Add shadow effect at the bottom */
+  /* Horizontal offset, vertical offset, blur radius, spread radius */
+  z-index: 2;
+  position: fixed;
+  top: 0;
+  width: 100%;
+  background-color: white;
+}
+
+header h1{
+  margin-left: 30px;
+  cursor: pointer;
+}
+
+nav {
+  display: flex;
+  margin-right: 20px;
+}
+
+nav ul {
+  display: flex;
+  align-items: center;
+}
+
+nav ul li {
+  list-style-type: none;
+  margin-right: 40px;
+  cursor: pointer;
+}
+
+/* Main Page */
+
+main {
+  padding: 120px 0 30px 0;
+  background-color:white;
+  z-index: 1;
+}
+
+/* Main_page */
+
+.hero_section{
+  display: flex;
+}
+
+
+.title_menu {
+  width: 1200px;
+  height: max-content;
+  margin: 20px auto 80px auto;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 200px;
+}
+
+.title_menu_sub {
+  width: 1200px;
+  height: max-content;
+  margin: 20px auto 80px auto;
+  align-items: center;
+  justify-content: center;
+  gap: 200px; 
+}
+
+.title_menu_sub h1 {
+  text-align: center;
+}
+
+.title_menu_sub p {
+  margin-top: 20px;
+  text-align: center;
+}
+
+.title {
+  width: 600px;
+}
+
+.title h1 {
+  text-align: left;
+}
+
+.title p {
+  margin-top: 30px;
+  text-align: left;
+}
+
+.image_info{
+  height: max-content;
+  width: max-content;
+
+}
+
+.image_info img{
+  width: 300px;
+  height: 400px;
+  border-radius: 15px 15px 15px 15px;
+}
+
+.option_card {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  max-width: 1100px;
+  margin: auto;
+  gap: 120px;
+}
+
+.scan_image {
+  width: 100%;
+  height: 180px;
+  background: linear-gradient(to right, white, rgba(149, 232, 234, 0.4));
+  border-radius: 10px;
+  cursor: pointer;
+}
+
+.scan_image:hover .card1_text h4::after{
+  width: 90px;
+}
+
+.live_signature:hover .card2_text h4::after {
+  width: 120px;
+}
+
+.card1_text, .card2_text {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  width: 300px;
+  height: 100%;
+  padding-left: 30px;
+}
+
+.card1_text p, .card2_text p {
+  margin-top: 10px;
+}
+
+.card1_text h4, .card2_text h4 {
+  color: #328fd6;
+  margin-top: 20px;
+  position: relative;
+}
+
+.card1_text h4::after, .card2_text h4::after {
+  content: '';
+  position: absolute;
+  left: 0;
+  bottom: -4px;
+  width: 0%;
+  height: 2px;
+  background-color: #328fd6;
+  transition: width 0.15s ease-out;
+}
+
+.live_signature{
+  width: 100%;
+  height: 180px;
+  background: linear-gradient(to right, white, rgba(167, 189, 233, 0.4));
+  border-radius: 10px;
+  cursor: pointer;
+}
+
+.underline_h4{
+  display: flex;
+}
+
+.arrow_icon{
+  width: 22px;
+  margin-top: 20px;
+  margin-left: 6px;
+}
+
+/* Image Classification Page */
+
+.image_classification{
+  display: flex;
+  flex-direction: column;
+  margin: auto;
+  max-width: 1000px;
+  margin-bottom: 100px;
+}
+
+.file_image {
+  border: 2px rgb(115, 115, 115) solid;
+  padding: 20px 0 20px 10px;
+  border-radius: 20px;
+}
+
+.submit_image_button{
+  width: 100px;
+  height: 40px;
+  margin: 20px 0 20px 0;
+}
+
+/* Footer */
+
+.footer_container {
+  padding: 10px 0;
+  text-align: center;
+  border-radius: 10px 10px 0 0;
+  /* border-top: black solid 1px; */
+  box-shadow: 0 1px 10px 1px rgba(0, 0, 0, 0.8);
+  background-color: white;
+}
+
+.footer_container p {
+  font-size: 12px;
+}
+
+.main_page{
+  margin-bottom: 20px;
+  
 }
